--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 
 <h1>My First Heading</h1>
  
-
 <p>My first paragraph.</p>
 
   
   <h2>Titre ajouté</h2>
+ 
+ <p>Second paragraphe<p>
+ 
+ 
 </body>
 </html>
